bug hotfix with the map page concering content overflowing and scrollbar created

--- a/src/styles/EuroMap.css
+++ b/src/styles/EuroMap.css
@@ -15,7 +15,8 @@
     position: relative;
     display:flex;
     padding:5%;
-    padding-top:10%;
+    padding-top:0%;
+    padding-bottom:0%;
 }
 
 .responsive{
